fix z-index account dropdown button

--- a/src/app/core/components/account-settings/account-settings.component.scss
+++ b/src/app/core/components/account-settings/account-settings.component.scss
@@ -16,15 +16,14 @@ p {
 
   .settings-group-title {
     font-weight: $font-weight-bold;
-    border-top: 1px solid $gray-300;
     border-bottom: 1px solid $gray-300;
     padding: $settings-padding-x;
   }
   
 
-  &:not(:first-child) {
+  &:not(:first-of-type) {
     .settings-group-title {
-      border-top: 0px solid $gray-300;
+      border-top: 1px solid $gray-300;
     }
   }
 }
